@@ -1,0 +1,3 @@
+domain ip6 chain INPUT {
+        proto tcp dport ssh ACCEPT;
+}
