@@ -1,0 +1,1 @@
+ip6tables -t filter -A INPUT -p tcp --dport ssh -j ACCEPT 
