@@ -52,6 +52,7 @@ v1.1+cvs - 5 Apr 2005
   - reset all policies to ACCEPT
   - variables expansion happens within double quotes
   - implemented automatic variables: $TABLE, $CHAIN
+  - IPv6/ip6tables support
 
 
 v1.1 - 5 May 2003
